fixed bug in read_coeffs, finished paid production functions

--- a/netprod/Reading in ref data - main dev.ipynb
+++ b/netprod/Reading in ref data - main dev.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "NB in long run has to be better to estimate models, and really just use coefficients - rather than lookup tables\n",
     "\n",
-    "These functions implemented in `read_coeffs.py`\n"
+    "## Next up\n",
+    "\n",
+    "Def finished really.  These functions implemented in `read_coeffs.py` which is probably the reference now.  Need to ensure any changes are pushed over to that or whatever.\n"
    ]
   },
   {
@@ -35,17 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def get_coeffs(wb, names_list):\n",
+    "def get_coeffs(wb):\n",
     "    '''Returns a dictionary with data from named ranges specified by names_list\n",
     "    from the xls passed as wb'''\n",
     "\n",
-    "    # First load up the data - all named ranges    \n",
+    "    # First get the names from the target sheet. \n",
+    "    # wb.defined_names is an object that has this info.\n",
+    "    # Probably a better way than this to extract names but hey\n",
+    "    names_list = [x.split(\",\")[0][1:].split(\"'\")[0] \n",
+    "                    for x in str(wb.defined_names).split('name=')\n",
+    "                    if \"xlnm\" not in x][1:]\n",
+    "\n",
+    "    # Now load up the data - all named ranges    \n",
     "    raw_dict = {}\n",
     "    for name in names_list:\n",
     "        raw_dict[name] = list(wb.defined_names[name].destinations)[0]\n",
@@ -62,18 +71,18 @@
     "            for cell in ws[rng]:\n",
     "                vals.append(cell[0].value)\n",
     "        else:\n",
-    "            vals.append(cell[0].value)\n",
+    "            vals.append(ws[rng].value)\n",
     "        \n",
     "        coeffs[coeff] = vals\n",
     "    \n",
-    "    return coeffs\n"
+    "    return coeffs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -99,6 +108,7 @@
     {
      "data": {
       "text/plain": [
+       "on_costs              0        0.300000\n",
        "Prod_MCS_coeffs       0        1.038300\n",
        "                      1        5.012200\n",
        "                      2       32.545900\n",
@@ -112,58 +122,57 @@
        "                      4        1.370000\n",
        "                      5       -0.090000\n",
        "                      6      -13.200000\n",
-       "Prod_wagepcm_M_byage  0      462.889152\n",
-       "                      1      462.889152\n",
-       "                      2      462.889152\n",
-       "                      3      462.889152\n",
-       "                      4      462.889152\n",
-       "                      5      462.889152\n",
-       "                      6      462.889152\n",
-       "                      7      462.889152\n",
-       "                      8      462.889152\n",
-       "                      9      462.889152\n",
-       "                      10     462.889152\n",
-       "                      11     462.889152\n",
-       "                      12     462.889152\n",
-       "                      13     462.889152\n",
-       "                      14     462.889152\n",
-       "                      15     462.889152\n",
-       "                      16     462.889152\n",
+       "Prod_wagepcm_F_byage  0      318.880643\n",
+       "                      1      318.880643\n",
+       "                      2      318.880643\n",
+       "                      3      318.880643\n",
+       "                      4      318.880643\n",
+       "                      5      318.880643\n",
+       "                      6      318.880643\n",
+       "                      7      318.880643\n",
+       "                      8      318.880643\n",
+       "                      9      318.880643\n",
+       "                      10     318.880643\n",
+       "                      11     318.880643\n",
+       "                      12     318.880643\n",
+       "                      13     318.880643\n",
+       "                      14     318.880643\n",
+       "                      15     318.880643\n",
        "                               ...     \n",
-       "Prod_wagepcm_F_byage  71    1135.462241\n",
-       "                      72    1135.462241\n",
-       "                      73    1135.462241\n",
-       "                      74    1135.462241\n",
-       "                      75    1135.462241\n",
-       "                      76    1135.462241\n",
-       "                      77    1135.462241\n",
-       "                      78    1135.462241\n",
-       "                      79    1135.462241\n",
-       "                      80    1135.462241\n",
-       "                      81    1135.462241\n",
-       "                      82    1135.462241\n",
-       "                      83    1135.462241\n",
-       "                      84    1135.462241\n",
-       "                      85    1135.462241\n",
-       "                      86    1135.462241\n",
-       "                      87    1135.462241\n",
-       "                      88    1135.462241\n",
-       "                      89    1135.462241\n",
-       "                      90    1135.462241\n",
-       "                      91    1135.462241\n",
-       "                      92    1135.462241\n",
-       "                      93    1135.462241\n",
-       "                      94    1135.462241\n",
-       "                      95    1135.462241\n",
-       "                      96    1135.462241\n",
-       "                      97    1135.462241\n",
-       "                      98    1135.462241\n",
-       "                      99    1135.462241\n",
-       "on_costs              0     1135.462241\n",
+       "Prod_wagepcm_M_byage  70    2410.041250\n",
+       "                      71    2410.041250\n",
+       "                      72    2410.041250\n",
+       "                      73    2410.041250\n",
+       "                      74    2410.041250\n",
+       "                      75    2410.041250\n",
+       "                      76    2410.041250\n",
+       "                      77    2410.041250\n",
+       "                      78    2410.041250\n",
+       "                      79    2410.041250\n",
+       "                      80    2410.041250\n",
+       "                      81    2410.041250\n",
+       "                      82    2410.041250\n",
+       "                      83    2410.041250\n",
+       "                      84    2410.041250\n",
+       "                      85    2410.041250\n",
+       "                      86    2410.041250\n",
+       "                      87    2410.041250\n",
+       "                      88    2410.041250\n",
+       "                      89    2410.041250\n",
+       "                      90    2410.041250\n",
+       "                      91    2410.041250\n",
+       "                      92    2410.041250\n",
+       "                      93    2410.041250\n",
+       "                      94    2410.041250\n",
+       "                      95    2410.041250\n",
+       "                      96    2410.041250\n",
+       "                      97    2410.041250\n",
+       "                      98    2410.041250\n",
+       "                      99    2410.041250\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,16 +182,8 @@
     "# First load in the workbook (data only, i.e. not formulas)\n",
     "wb = load_workbook('data/wsi_v0.1.31.xlsx', data_only=True)\n",
     "\n",
-    "# Make the list of coefficient sets - must be the same as in the xls\n",
-    "names_list = ['Prod_MCS_coeffs',\n",
-    "              'Prod_PCS_coeffs',\n",
-    "              'Prod_prod_coeffs',\n",
-    "              'Prod_wagepcm_M_byage',\n",
-    "              'Prod_wagepcm_F_byage',\n",
-    "              'on_costs']\n",
-    "\n",
-    "# Finally run it\n",
-    "make_pdseries(get_coeffs(wb, names_list))"
+    "# Run it\n",
+    "make_pdseries(get_coeffs(wb))"
    ]
   }
  ],
